# llm_agregate

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pylintrc  .yarnrc  Dockerfile  README.md  cspell.json  docker-compose.yaml  init_db1.json  logging.json  logging_debug.json  package.json  pyproject.toml
localtunnel/: fullchain.pem  privkey.pem
patches/: databases@0.7.0.patch  fluentcheck@0.2.0.patch  liccheck@0.9.2.patch  pip_audit@2.7.2.patch  wemake_python_styleguide.patch  wlc@1.13.patch
scripts/: .base.sh  build.sh  clean.sh  clear_all_docker.sh  create_build_info.py  create_patch.py  patch.py  prepare_build_env.sh  reinit_env.sh  run_python_as_python_builder_user.sh
scripts/git/: diff-marker.sh  fsck.sh  gc-force.sh  gc.sh
scripts/install/: all.sh  dotenv-linter.sh  shellcheck.sh
scripts/lint/: cspell.sh  dockerfilelint.sh  dockerlinter.sh  dotenv.sh  dup.sh  editorconfig.sh  lockfile.sh  md-link.sh  sh.sh  v8r.sh
src/: _debug_run.py  _l10n.py  _translation_server.py  run.py
src/l7x/: app.py  behavior_expander.py  logger.py  main.py  web_worker.py
src/l7x/commands/: base_context_creator.py
src/l7x/configs/: apm_context.py  constants.py  settings.py
src/l7x/listeners/: __init__.py  mainpage_listener.py
src/l7x/services/: autodetect_lang_service.py  base.py  langs_service.py  recognize_langs_service.py  recognize_service.py  translation_service.py  user_config_service.py
src/l7x/types/: errors.py  lang_services.py  language.py  localization.py  mapping.py  shutdown_event.py
src/l7x/utils/: aiohttp_utils.py  apm_utils.py  cmd_manager_utils.py  config_utils.py  contextmanager_utils.py  crypt_utils.py  datetime_utils.py  elasticsearch_logger.py  fastapi_utils.py  loop_utils.py  mapping_utils.py  orjson_utils.py  response_utils.py  worker_utils.py
static/: style.css
tests/: conftest.py  run_pytests.py
tests/test_stuff/: bdd_publish_article.py  test_stuff.py
